--- a/test/test_file_dict.ipynb
+++ b/test/test_file_dict.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -141,68 +141,36 @@
      "output_type": "stream",
      "text": [
       "object Sample1  no\n",
-      "object A string  no\n"
+      "object A string  no\n",
+      "      name  firstKey        secondKey  thridKey\n",
+      "0  Sample1      5.23         A string    32.543\n",
+      "1  Sample2     34.23  sample 2 string  2321.000\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>firstKey</th>\n",
-       "      <th>secondKey</th>\n",
-       "      <th>thridKey</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Sample1</td>\n",
-       "      <td>5.23</td>\n",
-       "      <td>A string</td>\n",
-       "      <td>32.543</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Sample2</td>\n",
-       "      <td>34.23</td>\n",
-       "      <td>sample 2 string</td>\n",
-       "      <td>2321.000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      name  firstKey        secondKey  thridKey\n",
-       "0  Sample1      5.23         A string    32.543\n",
-       "1  Sample2     34.23  sample 2 string  2321.000"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "open_dict_from_tablefile(TB_file_path)"
+    "df = open_dict_from_tablefile(TB_file_path)\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.23\n",
+      "[5.23, 34.23]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.get(\"firstKey\")[0])\n",
+    "a = list(df.get(\"firstKey\"))\n",
+    "print(a)"
    ]
   }
  ],
