--- a/test/test_file_dict.ipynb
+++ b/test/test_file_dict.ipynb
@@ -2,42 +2,72 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"data_raw\" could not be found as a branch of the folder tree form the notebook.\n",
-      "Please use standard project structure.\n",
-      "Project_Paths().create_project_structure()\n",
-      "from the root of the project.\n",
-      "\n",
-      "\"data_treated\" could not be found as a branch of the folder tree form the notebook.\n",
-      "Please use standard project structure.\n",
-      "Project_Paths().create_project_structure()\n",
-      "from the root of the project.\n",
-      "\n"
+      "['c:\\\\Users\\\\gusta\\\\Documents\\\\GitHub\\\\UNIBE\\\\Arenz_Group_Python\\\\src\\\\arenz_group_python', 'c:\\\\Users\\\\gusta\\\\Documents\\\\GitHub\\\\UNIBE\\\\Arenz_Group_Python\\\\src', 'c:\\\\Users\\\\gusta\\\\Documents\\\\GitHub\\\\UNIBE\\\\Arenz_Group_Python\\\\test', 'c:\\\\Users\\\\gusta\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\python313.zip', 'c:\\\\Users\\\\gusta\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\DLLs', 'c:\\\\Users\\\\gusta\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\Lib', 'c:\\\\Users\\\\gusta\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313', '', 'C:\\\\Users\\\\gusta\\\\AppData\\\\Roaming\\\\Python\\\\Python313\\\\site-packages', 'C:\\\\Users\\\\gusta\\\\AppData\\\\Roaming\\\\Python\\\\Python313\\\\site-packages\\\\win32', 'C:\\\\Users\\\\gusta\\\\AppData\\\\Roaming\\\\Python\\\\Python313\\\\site-packages\\\\win32\\\\lib', 'C:\\\\Users\\\\gusta\\\\AppData\\\\Roaming\\\\Python\\\\Python313\\\\site-packages\\\\Pythonwin', 'c:\\\\Users\\\\gusta\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\Lib\\\\site-packages']\n",
+      "c:\\Users\\gusta\\Documents\\GitHub\\UNIBE\\Arenz_Group_Python\\src\\arenz_group_python True\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#from arenz_group_python import Project_Paths as pp\n",
+    "import sys\n",
     "from pathlib import Path\n",
-    "from arenz_group_python import save_dict_to_file,load_dict_from_file,save_dict_to_tableFile,open_dict_from_tablefile\n"
+    "\n",
+    "print(sys.path)\n",
+    "p=Path(sys.path[0])\n",
+    "print(p,p.exists())\n",
+    "p.exists()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import arenz_group_python\n",
+    "from importlib.metadata import version\n",
+    "#version('arenz_group_python')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#from arenz_group_python import Project_Paths as pp\n",
+    "from pathlib import Path\n",
+    "from arenz_group_python import save_dict_to_file,load_dict_from_file,save_dict_to_tableFile\n",
+    "from arenz_group_python import open_dict_from_tablefile\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\BERN\\Arenz_Group_Python\\TEMP_Project True\n"
+      "c:\\Users\\gusta\\Documents\\GitHub\\UNIBE\\Arenz_Group_Python\\TEMP_Project True\n"
      ]
     }
    ],
@@ -53,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
