--- a/test/test_project.ipynb
+++ b/test/test_project.ipynb
@@ -2,27 +2,62 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#from arenz_group_python import Project_Paths as pp\n",
-    "from pathlib import Path\n",
-    "from arenz_group_python import create_project_structure\n",
-    "\n",
-    "import arenz_group_python"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\BERN\\Arenz_Group_Python\\TEMP_Project True\n",
+      "\"data_raw\" could not be found as a branch of the folder tree form the notebook.\n",
+      "Please use standard project structure.\n",
+      "Project_Paths().create_project_structure()\n",
+      "from the root of the project.\n",
+      "\n",
+      "\"data_treated\" could not be found as a branch of the folder tree form the notebook.\n",
+      "Please use standard project structure.\n",
+      "Project_Paths().create_project_structure()\n",
+      "from the root of the project.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from arenz_group_python import Project_Paths as pp\n",
+    "from pathlib import Path\n",
+    "#from arenz_group_python import create_project_structure\n",
+    "\n",
+    "import arenz_group_python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['c:\\\\Users\\\\gusta\\\\Documents\\\\GitHub\\\\UNIBE\\\\Arenz_Group_Python\\\\src', 'c:\\\\Users\\\\gusta\\\\Documents\\\\GitHub\\\\UNIBE\\\\Arenz_Group_Python\\\\test', 'c:\\\\Users\\\\gusta\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\python313.zip', 'c:\\\\Users\\\\gusta\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\DLLs', 'c:\\\\Users\\\\gusta\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\Lib', 'c:\\\\Users\\\\gusta\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313', '', 'C:\\\\Users\\\\gusta\\\\AppData\\\\Roaming\\\\Python\\\\Python313\\\\site-packages', 'C:\\\\Users\\\\gusta\\\\AppData\\\\Roaming\\\\Python\\\\Python313\\\\site-packages\\\\win32', 'C:\\\\Users\\\\gusta\\\\AppData\\\\Roaming\\\\Python\\\\Python313\\\\site-packages\\\\win32\\\\lib', 'C:\\\\Users\\\\gusta\\\\AppData\\\\Roaming\\\\Python\\\\Python313\\\\site-packages\\\\Pythonwin', 'c:\\\\Users\\\\gusta\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\Lib\\\\site-packages']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print(sys.path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\gusta\\Documents\\GitHub\\UNIBE\\Arenz_Group_Python\\TEMP_Project True\n",
       "-\"data_raw\" exists already as a folder\n",
       "-\"data_treated\" exists already as a folder\n",
       "-\"py_scripts\" exists already as a folder\n",
@@ -32,11 +67,13 @@
       "creating files:\n",
       "\n",
       "-\".env\" already exists\n",
+      "+\"requirements.txt\" was created or updated\n",
       "-\"__init__.py\" already exists\n",
-      "-\"c:\\Users\\gustav.wiberg\\Documents\\GitHub\\BERN\\Arenz_Group_Python\\TEMP_Project\\notebooks_models\\modelData.ipynb\" already exists\n",
-      "-\"c:\\Users\\gustav.wiberg\\Documents\\GitHub\\BERN\\Arenz_Group_Python\\TEMP_Project\\py_scripts\\my_Module.py\" already exists\n",
-      "-\"extractData.ipynb\" already exists\n",
       "-\"copy_data_from_server.ipynb\" already exists\n",
+      "-\"Project_Update_All_Modules.ipynb\" already exists\n",
+      "-\"c:\\Users\\gusta\\Documents\\GitHub\\UNIBE\\Arenz_Group_Python\\TEMP_Project\\notebooks_models\\modelData.ipynb\" already exists\n",
+      "-\"c:\\Users\\gusta\\Documents\\GitHub\\UNIBE\\Arenz_Group_Python\\TEMP_Project\\py_scripts\\my_Module.py\" already exists\n",
+      "-\"extractData.ipynb\" already exists\n",
       "-\"README.txt\" already exists\n",
       "-\"README.txt\" already exists\n",
       "-\"extracted_values.csv\" already exists\n"
@@ -51,39 +88,26 @@
     "print(pa, pa.exists())\n",
     "\n",
     "\n",
-    "create_project_structure(pa)\n",
+    "pp().create_project_structure(pa)\n",
     "\n",
     "#pp.create_project_structure()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "creating files:\n",
-      "\n",
-      "+\".env\" was created\n",
-      "+\"__init__.py\" was created\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'notebooks_models/modelData.ipynb'",
+     "ename": "FileExistsError",
+     "evalue": "[WinError 183] Cannot create a file when that file already exists: 'c:\\\\Users\\\\gusta\\\\Documents\\\\GitHub\\\\UNIBE\\\\Arenz_Group_Python\\\\TEMP_Project'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m pa\u001b[38;5;241m.\u001b[39mmkdir()\n\u001b[1;32m----> 2\u001b[0m \u001b[43mcreate_project_structure\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpa\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\Documents\\GitHub\\BERN\\Arenz_Group_Python\\src\\arenz_group_python\\__init__.py:37\u001b[0m, in \u001b[0;36mcreate_project_structure\u001b[1;34m(Path)\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcreate_project_structure\u001b[39m(Path):\n\u001b[0;32m     33\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"The fx creates a standard folder structure for projects.\u001b[39;00m\n\u001b[0;32m     34\u001b[0m \u001b[38;5;124;03m    Args\u001b[39;00m\n\u001b[0;32m     35\u001b[0m \u001b[38;5;124;03m    project_path : Path\u001b[39;00m\n\u001b[0;32m     36\u001b[0m \u001b[38;5;124;03m    Path to the base folder of the project.\"\"\"\u001b[39;00m\n\u001b[1;32m---> 37\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mProject_Paths\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcreate_project_structure\u001b[49m\u001b[43m(\u001b[49m\u001b[43mPath\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\Documents\\GitHub\\BERN\\Arenz_Group_Python\\src\\arenz_group_python\\project\\util_paths.py:151\u001b[0m, in \u001b[0;36mProject_Paths.create_project_structure\u001b[1;34m(self, project_path)\u001b[0m\n\u001b[0;32m    148\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe path to the project is not correct.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    149\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[1;32m--> 151\u001b[0m \u001b[43mmake_project_files\u001b[49m\u001b[43m(\u001b[49m\u001b[43m \u001b[49m\u001b[43mpp\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    152\u001b[0m make_project_files_data(pp)\n",
-      "File \u001b[1;32m~\\Documents\\GitHub\\BERN\\Arenz_Group_Python\\src\\arenz_group_python\\project\\make_files.py:23\u001b[0m, in \u001b[0;36mmake_project_files\u001b[1;34m(main_dir)\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m def_files:\n\u001b[0;32m     22\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m---> 23\u001b[0m         fo\u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mx\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     24\u001b[0m         fo\u001b[38;5;241m.\u001b[39mclose()\n\u001b[0;32m     25\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m+\u001b[39m\u001b[38;5;130;01m\\\"\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\\"\u001b[39;00m\u001b[38;5;124m was created\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'notebooks_models/modelData.ipynb'"
+      "\u001b[1;31mFileExistsError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mpa\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmkdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m create_project_structure(pa)\n",
+      "File \u001b[1;32mc:\\Users\\gusta\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\pathlib\\_local.py:722\u001b[0m, in \u001b[0;36mPath.mkdir\u001b[1;34m(self, mode, parents, exist_ok)\u001b[0m\n\u001b[0;32m    718\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    719\u001b[0m \u001b[38;5;124;03mCreate a new directory at this given path.\u001b[39;00m\n\u001b[0;32m    720\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    721\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 722\u001b[0m     \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmkdir\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    723\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m:\n\u001b[0;32m    724\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m parents \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparent \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mself\u001b[39m:\n",
+      "\u001b[1;31mFileExistsError\u001b[0m: [WinError 183] Cannot create a file when that file already exists: 'c:\\\\Users\\\\gusta\\\\Documents\\\\GitHub\\\\UNIBE\\\\Arenz_Group_Python\\\\TEMP_Project'"
      ]
     }
    ],
@@ -166,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
