--- a/test/test_project.ipynb
+++ b/test/test_project.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
       "+\"requirements.txt\" was created or updated\n",
       "-\"__init__.py\" already exists\n",
       "-\"copy_data_from_server.ipynb\" already exists\n",
-      "-\"Project_Update_All_Modules.ipynb\" already exists\n",
+      "+\"Project_Update_All_Modules.ipynb\" was created\n",
       "-\"c:\\Users\\gusta\\Documents\\GitHub\\UNIBE\\Arenz_Group_Python\\TEMP_Project\\notebooks_models\\modelData.ipynb\" already exists\n",
       "-\"c:\\Users\\gusta\\Documents\\GitHub\\UNIBE\\Arenz_Group_Python\\TEMP_Project\\py_scripts\\my_Module.py\" already exists\n",
       "-\"extractData.ipynb\" already exists\n",
@@ -117,14 +117,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.3.6\n"
+      "0.3.8\n"
      ]
     }
    ],
