--- a/dev/data/xml/xdl_reader.ipynb
+++ b/dev/data/xml/xdl_reader.ipynb
@@ -29,7 +29,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
+   "id": "16340ac5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metadata {}\n",
+      "Hardware {}\n",
+      "Reagents {}\n",
+      "Procedure {}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for child in syn :\n",
+    "    print(child.tag, child.attrib)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e05bb7a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prep {}\n",
+      "Reaction {}\n"
+     ]
+    }
+   ],
+   "source": [
+    "pro = syn.find(\"Procedure\")\n",
+    "for child in pro :\n",
+    "    print(child.tag, child.attrib)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5d68d9de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transfer {'volume': '0.000E+0 l', 'time': '0.00 min', 'to_vessel': 'Reactor 1', 'from_vessel': 'stock1', 'disc': 'Transfer the content from V_Ink_58_Optimization_SN to Reactor'}\n",
+      "Spray {'flow': '3.3333E-8 s^-1 m^3', 'vessel': '', 'time': '15.70 min', 'volume': '4.710E-4 l', 'substrate': 'SUBS0001', 'disc': 'Spray ( 471ul) onto Freudenberg H23C8. Gas flow at 2,00 ml/min'}\n",
+      "{'flow': '3.3333E-8 s^-1 m^3', 'vessel': '', 'time': '15.70 min', 'volume': '4.710E-4 l', 'substrate': 'SUBS0001', 'disc': 'Spray ( 471ul) onto Freudenberg H23C8. Gas flow at 2,00 ml/min'}\n",
+      "3.3333E-8 s^-1 m^3\n",
+      "4.710E-4 l\n"
+     ]
+    }
+   ],
+   "source": [
+    "Procedure = syn.find(\"Procedure\")\n",
+    "Reaction = Procedure.find(\"Reaction\")\n",
+    "for child in Reaction :\n",
+    "    print(child.tag, child.attrib)\n",
+    "    \n",
+    "Spray = Reaction.find(\"Spray\")\n",
+    "print(Spray.attrib)\n",
+    "print(Spray.attrib[\"flow\"])\n",
+    "print(Spray.attrib[\"volume\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "d9787e5d",
    "metadata": {},
    "outputs": [
@@ -44,6 +117,16 @@
       "\n",
       "TOTAL VOL: 4.839e-04 l\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.7873202182178872"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -69,19 +152,20 @@
     "            \n",
     "        if(child.attrib[\"name\"] == \"Aquivion Dispersion D79-25BS\"):\n",
     "            vol_aq = q\n",
-    "            vol_aq._quantity = \"V\"\n",
+    "           \n",
     "            print(\"vol_aq:\", vol_aq)\n",
     "        if(child.attrib[\"id\"] == \"ISOPROPANOL\"):\n",
     "            vol_ISO = q\n",
-    "            vol_ISO._quantity = \"V\"\n",
+    "            \n",
     "            print(\"vol_ISO:\", vol_ISO)\n",
     "        if(child.attrib[\"id\"] == \"WATER\"):\n",
     "            vol_H2O = q\n",
-    "            vol_H2O._quantity=\"V\"\n",
+    "           \n",
     "            print(\"vol_H2O:\", vol_H2O)\n",
     "        \n",
     "vol=vol_aq+vol_H2O+vol_ISO\n",
-    "print(\"\\nTOTAL VOL:\", vol )  "
+    "print(\"\\nTOTAL VOL:\", vol )  \n",
+    "float(vol_ISO /vol)"
    ]
   }
  ],
