--- a/dev/Project_Setup/Project_Create_Structure.ipynb
+++ b/dev/Project_Setup/Project_Create_Structure.ipynb
@@ -20,17 +20,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\src\n",
-      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\dev\\Project_Setup\n",
-      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\.conda\\python311.zip\n",
-      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\.conda\\DLLs\n",
-      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\.conda\\Lib\n",
-      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\.conda\n",
+      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\BERN\\Arenz_Group_Python\\dev\\Project_Setup\n",
+      "C:\\Users\\gustav.wiberg\\Documents\\GitHub\\BERN\\Arenz_Group_Python\\src\n",
+      "c:\\Users\\gustav.wiberg\\AppData\\Local\\Programs\\Python\\Python311\\python311.zip\n",
+      "c:\\Users\\gustav.wiberg\\AppData\\Local\\Programs\\Python\\Python311\\DLLs\n",
+      "c:\\Users\\gustav.wiberg\\AppData\\Local\\Programs\\Python\\Python311\\Lib\n",
+      "c:\\Users\\gustav.wiberg\\AppData\\Local\\Programs\\Python\\Python311\n",
       "\n",
-      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\.conda\\Lib\\site-packages\n",
-      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\.conda\\Lib\\site-packages\\win32\n",
-      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\.conda\\Lib\\site-packages\\win32\\lib\n",
-      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\.conda\\Lib\\site-packages\\Pythonwin\n"
+      "c:\\Users\\gustav.wiberg\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\n",
+      "c:\\Users\\gustav.wiberg\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\win32\n",
+      "c:\\Users\\gustav.wiberg\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\win32\\lib\n",
+      "c:\\Users\\gustav.wiberg\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\Pythonwin\n"
      ]
     }
    ],
@@ -49,7 +49,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\dev\\Project_Setup\n"
+      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\BERN\\Arenz_Group_Python\\dev\\Project_Setup\n"
      ]
     }
    ],
@@ -79,12 +79,15 @@
       "\n",
       "creating files:\n",
       "\n",
-      "+\".env\" was created\n",
+      "-\".env\" already exists\n",
+      "+\"requirements.txt\" was created or updated\n",
       "-\"__init__.py\" already exists\n",
-      "-\"notebooks_models/modelData.ipynb\" already exists\n",
-      "-\"py_scripts/my_Module.py\" already exists\n",
-      "-\"extractData.ipynb\" already exists\n",
       "-\"copy_data_from_server.ipynb\" already exists\n",
+      "-\"download_experiment_and_data_from_ELABFTW.ipynb\" already exists\n",
+      "-\"Project_Update_All_Modules.ipynb\" already exists\n",
+      "-\"c:\\Users\\gustav.wiberg\\Documents\\GitHub\\BERN\\Arenz_Group_Python\\dev\\Project_Setup\\notebooks_models\\modelData.ipynb\" already exists\n",
+      "-\"c:\\Users\\gustav.wiberg\\Documents\\GitHub\\BERN\\Arenz_Group_Python\\dev\\Project_Setup\\py_scripts\\my_Module.py\" already exists\n",
+      "-\"extractData.ipynb\" already exists\n",
       "-\"README.txt\" already exists\n",
       "-\"README.txt\" already exists\n",
       "-\"extracted_values.csv\" already exists\n"
@@ -94,6 +97,41 @@
    "source": [
     "#Creates the folder structre\n",
     "Project_Paths().create_project_structure(main_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import arenz_group_python.elabftw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment with ID 6 not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from arenz_group_python import elabftw\n",
+    "elabftw.connect()\n",
+    "elabftw.download_experiment_tree(6)"
    ]
   }
  ],
@@ -113,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
