--- a/dev/Project_Setup/Project_Create_Structure.ipynb
+++ b/dev/Project_Setup/Project_Create_Structure.ipynb
@@ -124,7 +124,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Experiment with ID 6 not found.\n"
+      "Found 5 experiments\n",
+      "----1/5------------------ID= 6 \t<Project>\\Project_Setup\\data_raw\\ATS-JF060_Ir-ATO\n",
+      "\t\tSaving file \"ATS-JF060_Ir-ATO.pdf\"\n",
+      "\t\tSaving file \"ATS-JF060_Ir-ATO.json\"\n",
+      "\t\tFound 4 uploads\n",
+      "\t\t 1 \t 6 ATS-JF060_recipe.tdms None\n",
+      "\t\t 2 \t 4 ATS-JF060_recipe.txt None\n",
+      "\t\t 3 \t 5 ATS-JF060_recipe.xdl None\n",
+      "\t\t 4 \t 2 image.png None\n",
+      "----2/5------------------ID= 8 \t<Project>\\Project_Setup\\data_raw\\ATS-JF060_Ir-ATO\\INK-JF060_Ir-ATO\n",
+      "\t\tSaving file \"INK-JF060_Ir-ATO.pdf\"\n",
+      "\t\tSaving file \"INK-JF060_Ir-ATO.json\"\n",
+      "\t\tNo uploads found\n",
+      "----3/5------------------ID= 9 \t<Project>\\Project_Setup\\data_raw\\ATS-JF060_Ir-ATO\\INK-JF060_Ir-ATO\\MWE-JF016\n",
+      "\t\tSaving file \"MWE-JF016.pdf\"\n",
+      "\t\tSaving file \"MWE-JF016.json\"\n",
+      "\t\tNo uploads found\n",
+      "----4/5------------------ID= 7 \t<Project>\\Project_Setup\\data_raw\\ATS-JF060_Ir-ATO\\INK-JF060_Ir-ATO\\MWE-JF016\\MWE-JF016_Activity_Assessment\n",
+      "\t\tSaving file \"MWE-JF016_Activity_Assessment.pdf\"\n",
+      "\t\tSaving file \"MWE-JF016_Activity_Assessment.json\"\n",
+      "\t\tFound 12 uploads\n",
+      "\t\t 1 \t 9 CV_130600_-1_MI.tdms None\n",
+      "\t\t 2 \t 10 CV_130730_-2_MI.tdms None\n",
+      "\t\t 3 \t 11 CV_130900_-3_MI.tdms None\n",
+      "\t\t 4 \t 12 CV_131030_-4_MI.tdms None\n",
+      "\t\t 5 \t 13 CV_131200_-5_MI.tdms None\n",
+      "\t\t 6 \t 14 CV_131330_-6_MI.tdms None\n",
+      "\t\t 7 \t 15 CV_131500_-7_MI.tdms None\n",
+      "\t\t 8 \t 16 CV_131630_-8_MI.tdms None\n",
+      "\t\t 9 \t 17 CV_131800_-9_MI.tdms None\n",
+      "\t\t 10 \t 18 CV_131930_10_MI.tdms None\n",
+      "\t\t 11 \t 19 Macro.EC_Macro None\n",
+      "\t\t 12 \t 20 Macro_Log.txt None\n",
+      "----5/5------------------ID= 2 \t<Project>\\Project_Setup\\data_raw\\ATS-JF060_Ir-ATO\\INK-JF060_Ir-ATO\\MWE-JF016\\MWE-JF016_Activity_Assessment\\Untitled\n",
+      "\t\tSaving file \"Untitled.pdf\"\n",
+      "\t\tSaving file \"Untitled.json\"\n",
+      "\t\tNo uploads found\n"
      ]
     }
    ],
