--- a/dev/Packages/Local_Project_Create_Structure.ipynb
+++ b/dev/Packages/Local_Project_Create_Structure.ipynb
@@ -13,17 +13,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\n",
-      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\src\n",
-      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\src\n",
-      "['c:\\\\Users\\\\gusta\\\\Documents\\\\GitHub\\\\Arenz_Group_Python\\\\src\\\\arenz_group_python']\n"
+      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\BERN\\Arenz_Group_Python\\dev\\Packages\n",
+      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\BERN\\Arenz_Group_Python\\src\n",
+      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\BERN\\Arenz_Group_Python\\src\n",
+      "\"data_treated\" could not be found as a branch of the folder tree form the notebook.\n",
+      "Please use standard project structure.\n",
+      "Project_Paths().create_project_structure()\n",
+      "from the root of the project.\n",
+      "\n",
+      "['c:\\\\Users\\\\gustav.wiberg\\\\Documents\\\\GitHub\\\\BERN\\\\Arenz_Group_Python\\\\src\\\\arenz_group_python']\n"
      ]
     }
    ],
@@ -48,37 +53,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\tests\\Packages\n",
-      "-\"data_raw\" exists already as a folder\n",
-      "-\"data_treated\" exists already as a folder\n",
-      "-\"py_scripts\" exists already as a folder\n",
-      "-\"notebooks_models\" exists already as a folder\n",
-      "-\"notebooks_exploration_cleaning\" exists already as a folder\n",
+      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\BERN\\Arenz_Group_Python\\TEMP_Project\\TEMP_Project True\n",
       "\n",
       "creating files:\n",
       "\n",
-      "-\"notebooks_models/modelData.ipynb\" already exists\n",
-      "-\"py_scripts/my_Module.py\" already exists\n",
-      "-\"__init__.py\" already exists\n",
-      "-\"extractData.ipynb\" already exists\n",
-      "-\"copy_data_from_server.ipynb\" already exists\n",
-      "-\"README.txt\" already exists\n",
-      "-\"README.txt\" already exists\n",
-      "-\"extracted_values.csv\" already exists\n"
+      "+\".env\" was created\n",
+      "+\"requirements.txt\" was created or updated\n",
+      "+\"__init__.py\" was created\n",
+      "+\"download_experiment_and_data_from_ELABFTW.ipynb\" was created\n",
+      "+\"Project_Update_All_Modules.ipynb\" was created\n",
+      "+\"c:\\Users\\gustav.wiberg\\Documents\\GitHub\\BERN\\Arenz_Group_Python\\TEMP_Project\\TEMP_Project\\notebooks_models\\modelData.ipynb\" was created\n",
+      "+\"c:\\Users\\gustav.wiberg\\Documents\\GitHub\\BERN\\Arenz_Group_Python\\TEMP_Project\\TEMP_Project\\py_scripts\\my_Module.py\" was created\n",
+      "+\"extractData.ipynb\" was created\n",
+      "+\"README.txt\" was created\n",
+      "+\"README.txt\" was created\n",
+      "+\"extracted_values.csv\" was created\n"
      ]
     }
    ],
    "source": [
     "\n",
     "from arenz_group_python import Project_Paths\n",
-    "pp= Project_Paths().create_project_structure(nb_path)"
+    "\n",
+    "p = nb_path.parent.parent / \"TEMP_Project\" /\"TEMP_Project\"\n",
+    "print(p, p.exists())\n",
+    "pp= Project_Paths().create_project_structure(nb_path.parent.parent / \"TEMP_Project\" / \"TEMP_Project\")"
    ]
   }
  ],
@@ -98,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
